--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,1 +1,3 @@
-<p>category works!</p>
+<div class="list-group">
+    <a *ngFor="let item of categories" href="#" class="list-group-item list-group-item-action">{{item.name}}</a>
+</div>
