--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,2 +1,49 @@
-<p>movies works!</p>
-<app-movie>  </app-movie>
+
+<div *ngIf="movies.length > 0 else no_movies" >
+
+    <h1> {{ title }}</h1>
+    <div class="alert alert-success"> {{movies.length}} adet film listelendi</div>
+
+
+    <ng-template [ngTemplateOutlet]="movieList1"></ng-template>
+
+
+</div>
+
+<ng-template #no_movies>
+    <div class="alert alert-warning"> Film Bulunamadı</div>
+</ng-template>     
+
+<ng-template #movieList1>
+    <div class="card mb-3" *ngFor="let item of movies">
+        <div class="row">
+            <div class="col-md-3">
+                <img src="./assets/img/{{ item.imageUrl }}" class="img-fluid rounded-start" alt="">
+            </div>
+            <div class="col-md-9">
+                <div class="card-body">
+                    <h2 class="card-title">{{item.title}}</h2>
+                    <p class="card-text"> {{item.description}} </p>
+                    <button class="btn btn-sm btn-outline-primary">Details</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
+
+<ng-template #movieList2 >
+    <div class="card mb-3" *ngFor="let item of movies">
+        <div class="row">
+            <div class="col-md-3">
+                <img src="./assets/img/{{ item.imageUrl }}" class="img-fluid rounded-start" alt="">
+            </div>
+            <div class="col-md-9">
+                <div class="card-body">
+                    <h2 class="card-title">{{item.title}}</h2>
+                    <p class="card-text"> {{item.description}} </p>
+                    <button class="btn btn-sm btn-outline-primary">Details</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
